--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,4 +33,4 @@ jobs:
           push: true
           tags: |
             ${{ secrets.DOCKER_USERNAME }}/edatum:latest
-            ${{ secrets.DOCKER_USERNAME }}/edtaum:${{ env.TIMESTAMP }}
+            ${{ secrets.DOCKER_USERNAME }}/edatum:${{ env.TIMESTAMP }}
