--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,5 +6,5 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "8501:8501"   # Expose port for Streamlit
-    restart: always   # Automatically restart the container if it crashes
+      - "8501:8501"
+    restart: always
